--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
             <!-- Left Content -->
             <div class="col-xl-6 d-flex flex-column justify-content-center">
               <h1>Welcome to Fourise Software Solutions Pvt. Ltd.</h1>
-              <h2>We solve the problem and provide optimal <br>solutions for your business.</h2>
+              <h2 style="margin-left: -70px;">We solve the problem and provide optimal </h2>
+              <h2 style="margin-left: -248px; margin-top: -19px;">solutions for your business.</h2>
               <div>
                 <a href="about.html" class="btn-get-started scrollto">Know More</a>
                 <a href="contact.html" class="btn-get-started scrollto">Contact Us</a>
