--- a/index.html
+++ b/index.html
@@ -86,33 +86,34 @@
 
 
   <!-- Hero Section -->
-  <section id="hero" class="d-flex align-items-center" style="margin-top: 10px; padding: 50px;">
-    <div class="container-fluid" data-aos="zoom-out" data-aos-delay="100">
-      <div class="row justify-content-center">
-        <div class="col-xl-10">
-          <div class="row">
-            <!-- Left Content -->
-            <div class="col-xl-6 d-flex flex-column justify-content-center">
-              <h1>Welcome to Fourise Software Solutions Pvt. Ltd.</h1>
-              <h2 style="margin-left: -70px;">We solve the problem and provide optimal </h2>
-              <h2 style="margin-left: -248px; margin-top: -19px;">solutions for your business.</h2>
-              <div>
-                <a href="about.html" class="btn-get-started scrollto">Know More</a>
-                <a href="contact.html" class="btn-get-started scrollto">Contact Us</a>
-              </div>
+  <section id="hero" class="d-flex align-items-center">
+  <div class="container-fluid" data-aos="zoom-out" data-aos-delay="100">
+    <div class="row justify-content-center">
+      <div class="col-xl-10">
+        <div class="row">
+          <!-- Left Content -->
+          <div class="col-xl-6 d-flex flex-column justify-content-center">
+            <h1>Welcome to Fourise Software Solutions Pvt. Ltd.</h1>
+            <h2 class="hero-subtitle hero-subtitle-1">Driving your business forward with optimal solutions.</h2>
+            <div>
+              <a href="about.html" class="btn-get-started scrollto">Know More</a>
+              <a href="contact.html" class="btn-get-started scrollto">Contact Us</a>
             </div>
+          </div>
 
-            <!-- Right Content -->
-            <div class="col-xl-6 hero-video d-flex justify-content-center align-items-center">
-              <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.3.0/dist/dotlottie-wc.js" type="module"></script>
-              <dotlottie-wc src="https://lottie.host/b4a99040-90c4-42e6-ade4-a50334ff9bf3/0k3Wirz6Wg.lottie" autoplay loop style="width: 220%; height: auto; max-width: 700px; max-height: 600px;">
-              </dotlottie-wc>
-            </div>
+          <!-- Right Content -->
+          <div class="col-xl-6 hero-video d-flex justify-content-center align-items-center">
+            <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.3.0/dist/dotlottie-wc.js" type="module"></script>
+            <dotlottie-wc src="https://lottie.host/b4a99040-90c4-42e6-ade4-a50334ff9bf3/0k3Wirz6Wg.lottie" autoplay loop class="hero-animation"></dotlottie-wc>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
+
+
+
 
   <main id="main">
 
