--- a/index.html
+++ b/index.html
@@ -184,11 +184,11 @@
     <!-- ======= Counts Section ======= -->
    
   <!-- ======= Features with Pie Chart ======= -->
-<section id="features" style="background: #f8f9fa; padding: 80px 0;">
+<section id="features">
   <div class="container" data-aos="fade-up">
-    <h3 style="font-size: 36px; font-weight: 700; margin-bottom: 20px; text-align: center;">
-      Key Features of <span style="color: #e03a3c;">Fourise</span> Software Solutions
-    </h3>
+    <h1 class="section-title">
+      Key Features of <span class="highlight-text">Fourise</span> Software Solutions
+    </h1>
 
     <div class="row">
       <!-- Pie Chart on the left side -->
@@ -199,17 +199,18 @@
 
       <!-- Labels on the right side -->
       <div class="col-lg-6 order-lg-2 order-2 d-flex flex-column justify-content-center">
-        <ul style="list-style: none; padding: 0; font-size: 18px; line-height: 1.8;">
-          <li><span style="color: #e03a3c;">●</span> Optimal Solution for rigid problems</li>
-          <li><span style="color: #4e73df;">●</span> Quality-based product with increased efficiency</li>
-          <li><span style="color: #1cc88a;">●</span> Easy-to-use systems</li>
-          <li><span style="color: #36b9cc;">●</span> Maximum output with minimal resources</li>
-          <li><span style="color: #f8d7da;">●</span> Security privileges preserved</li>
+        <ul>
+          <li><span class="bullet-red">●</span> Optimal Solution for rigid problems</li>
+          <li><span class="bullet-blue">●</span> Quality-based product with increased efficiency</li>
+          <li><span class="bullet-green">●</span> Easy-to-use systems</li>
+          <li><span class="bullet-teal">●</span> Maximum output with minimal resources</li>
+          <li><span class="bullet-pink">●</span> Security privileges preserved</li>
         </ul>
       </div>
     </div>
   </div>
 </section>
+
 <!-- End Features Section -->
 
 <!-- Add this at the bottom to load Chart.js -->
@@ -255,7 +256,7 @@
 
 
 <!-- ======= Hero Section with Horizontal Slider ======= -->
-<section id="hero" class="partners-wrapper d-flex align-items-center" style="background-color: #1b1b1b; padding: 60px 0; height: 70vh;">
+<section id="hero" class="partners-wrapper d-flex align-items-center" style="background-color: #1b1b1b; padding: 60px 0; height: 70vh; border-radius: 60px;">
   <div class="container-fluid" data-aos="zoom-out" data-aos-delay="100">
     <div class="row justify-content-center">
       <div class="col-xl-10">
@@ -267,61 +268,61 @@
           </div>
 
           <!-- Slider Container -->
-          <div class="col-xl-12" style="overflow: hidden; position: relative;">
+          <div class="col-xl-12" style="overflow: hidden; position: relative; border-radius: 30px;">
             <!-- Previous Button -->
             <button id="prevButton" style="position: absolute; top: 50%; left: 10px; transform: translateY(-50%); background: none; border: none; cursor: pointer; z-index: 10;">
               <img src="assets/img/partner/previous.png" alt="Previous" style="width: 40px; height: 40px;" />
             </button>
 
             <!-- Slider -->
-            <div id="partnersContainer" class="partners-container" style="display: flex; transition: transform 1s ease; width: 500%;">
+            <div id="partnersContainer" class="partners-container" style="display: flex; transition: transform 1s ease; width: 500%; border-radius: 30px;">
               <!-- Slide 1 -->
               <div class="partners-slide" style="width: 20%; display: flex; align-items: center; justify-content: space-between;">
                 <div style="flex: 1; display: flex; justify-content: space-between; padding: 10px;">
-                  <img src="assets/img/partner/1.jpg" alt="Image 1" style="width: 23%; height: auto;" />
-                  <img src="assets/img/partner/2.jpg" alt="Image 2" style="width: 23%; height: auto;" />
-                  <img src="assets/img/partner/3.png" alt="Image 3" style="width: 23%; height: auto;" />
-                  <img src="assets/img/partner/4.png" alt="Image 4" style="width: 23%; height: auto;" />
+                  <img src="assets/img/partner/1.jpg" alt="Image 1" style="width: 23%; height: auto; border-radius: 20px;" />
+                  <img src="assets/img/partner/2.jpg" alt="Image 2" style="width: 23%; height: auto; border-radius: 20px;" />
+                  <img src="assets/img/partner/3.png" alt="Image 3" style="width: 23%; height: auto; border-radius: 20px;" />
+                  <img src="assets/img/partner/4.png" alt="Image 4" style="width: 23%; height: auto; border-radius: 20px;" />
                 </div>
               </div>
 
               <!-- Slide 2 -->
               <div class="partners-slide" style="width: 20%; display: flex; align-items: center; justify-content: space-between;">
                 <div style="flex: 1; display: flex; justify-content: space-between; padding: 10px;">
-                  <img src="assets/img/partner/5.png" alt="Image 5" style="width: 23%; height: auto;" />
-                  <img src="assets/img/partner/6.jpg" alt="Image 6" style="width: 23%; height: auto;" />
-                  <img src="assets/img/partner/7.jpg" alt="Image 7" style="width: 23%; height: auto;" />
-                  <img src="assets/img/partner/8.png" alt="Image 8" style="width: 23%; height: auto;" />
+                  <img src="assets/img/partner/5.png" alt="Image 5" style="width: 23%; height: auto; border-radius: 20px;" />
+                  <img src="assets/img/partner/6.jpg" alt="Image 6" style="width: 23%; height: auto; border-radius: 20px;" />
+                  <img src="assets/img/partner/7.jpg" alt="Image 7" style="width: 23%; height: auto; border-radius: 20px;" />
+                  <img src="assets/img/partner/8.png" alt="Image 8" style="width: 23%; height: auto; border-radius: 20px;" />
                 </div>
               </div>
 
               <!-- Slide 3 -->
               <div class="partners-slide" style="width: 20%; display: flex; align-items: center; justify-content: space-between;">
                 <div style="flex: 1; display: flex; justify-content: space-between; padding: 10px;">
-                  <img src="assets/img/partner/9.png" alt="Image 9" style="width: 23%; height: auto;" />
-                  <img src="assets/img/partner/10.jpg" alt="Image 10" style="width: 23%; height: auto;" />
-                  <img src="assets/img/partner/11.jpg" alt="Image 11" style="width: 23%; height: auto;" />
-                  <img src="assets/img/partner/12.jpg" alt="Image 12" style="width: 23%; height: auto;" />
+                  <img src="assets/img/partner/9.png" alt="Image 9" style="width: 23%; height: auto; border-radius: 20px;" />
+                  <img src="assets/img/partner/10.jpg" alt="Image 10" style="width: 23%; height: auto; border-radius: 20px;" />
+                  <img src="assets/img/partner/11.jpg" alt="Image 11" style="width: 23%; height: auto; border-radius: 20px;" />
+                  <img src="assets/img/partner/12.jpg" alt="Image 12" style="width: 23%; height: auto; border-radius: 20px;" />
                 </div>
               </div>
 
               <!-- Slide 4 -->
               <div class="partners-slide" style="width: 20%; display: flex; align-items: center; justify-content: space-between;">
                 <div style="flex: 1; display: flex; justify-content: space-between; padding: 10px;">
-                  <img src="assets/img/partner/13.jpg" alt="Image 13" style="width: 23%; height: auto;" />
-                  <img src="assets/img/partner/14.jpg" alt="Image 14" style="width: 23%; height: auto;" />
-                  <img src="assets/img/partner/15.jpg" alt="Image 15" style="width: 23%; height: auto;" />
-                  <img src="assets/img/partner/16.jpg" alt="Image 16" style="width: 23%; height: auto;" />
+                  <img src="assets/img/partner/13.jpg" alt="Image 13" style="width: 23%; height: auto; border-radius: 20px;" />
+                  <img src="assets/img/partner/14.jpg" alt="Image 14" style="width: 23%; height: auto; border-radius: 20px;" />
+                  <img src="assets/img/partner/15.jpg" alt="Image 15" style="width: 23%; height: auto; border-radius: 20px;" />
+                  <img src="assets/img/partner/16.jpg" alt="Image 16" style="width: 23%; height: auto; border-radius: 20px;" />
                 </div>
               </div>
 
               <!-- Slide 5 -->
               <div class="partners-slide" style="width: 20%; display: flex; align-items: center; justify-content: space-between;">
                 <div style="flex: 1; display: flex; justify-content: space-between; padding: 10px;">
-                  <img src="assets/img/partner/17.png" alt="Image 17" style="width: 23%; height: auto;" />
-                  <img src="assets/img/partner/18.png" alt="Image 18" style="width: 23%; height: auto;" />
-                  <img src="assets/img/partner/19.jpg" alt="Image 19" style="width: 23%; height: auto;" />
-                  <img src="assets/img/partner/20.jpg" alt="Image 20" style="width: 23%; height: auto;" />
+                  <img src="assets/img/partner/17.png" alt="Image 17" style="width: 23%; height: auto; border-radius: 20px;" />
+                  <img src="assets/img/partner/18.png" alt="Image 18" style="width: 23%; height: auto; border-radius: 20px;" />
+                  <img src="assets/img/partner/19.jpg" alt="Image 19" style="width: 23%; height: auto; border-radius: 20px;" />
+                  <img src="assets/img/partner/20.jpg" alt="Image 20" style="width: 23%; height: auto; border-radius: 20px;" />
                 </div>
               </div>
             </div>
@@ -368,6 +369,7 @@
     setInterval(slideChange, 4000);
   </script>
 </section>
+
 
 
 
