--- a/index.html
+++ b/index.html
@@ -289,9 +289,9 @@
               <!-- Slide 2 -->
               <div class="partners-slide" style="width: 20%; display: flex; align-items: center; justify-content: space-between;">
                 <div style="flex: 1; display: flex; justify-content: space-between; padding: 10px;">
-                  <img src="assets/img/partner/5.png" alt="Image 5" style="width: 23%; height: auto; border-radius: 20px;" />
+                  <img src="assets/img/partner/5.jpg" alt="Image 5" style="width: 23%; height: auto; border-radius: 20px;" />
                   <img src="assets/img/partner/6.jpg" alt="Image 6" style="width: 23%; height: auto; border-radius: 20px;" />
-                  <img src="assets/img/partner/7.jpg" alt="Image 7" style="width: 23%; height: auto; border-radius: 20px;" />
+                  <img src="assets/img/partner/7.png" alt="Image 7" style="width: 23%; height: auto; border-radius: 20px;" />
                   <img src="assets/img/partner/8.png" alt="Image 8" style="width: 23%; height: auto; border-radius: 20px;" />
                 </div>
               </div>
@@ -299,32 +299,15 @@
               <!-- Slide 3 -->
               <div class="partners-slide" style="width: 20%; display: flex; align-items: center; justify-content: space-between;">
                 <div style="flex: 1; display: flex; justify-content: space-between; padding: 10px;">
-                  <img src="assets/img/partner/9.png" alt="Image 9" style="width: 23%; height: auto; border-radius: 20px;" />
+                  <img src="assets/img/partner/9.jpg" alt="Image 9" style="width: 23%; height: auto; border-radius: 20px;" />
                   <img src="assets/img/partner/10.jpg" alt="Image 10" style="width: 23%; height: auto; border-radius: 20px;" />
-                  <img src="assets/img/partner/11.jpg" alt="Image 11" style="width: 23%; height: auto; border-radius: 20px;" />
-                  <img src="assets/img/partner/12.jpg" alt="Image 12" style="width: 23%; height: auto; border-radius: 20px;" />
+                  <img src="assets/img/partner/11.png" alt="Image 11" style="width: 23%; height: auto; border-radius: 20px;" />
+                  <img src="assets/img/partner/12.png" alt="Image 12" style="width: 23%; height: auto; border-radius: 20px;" />
                 </div>
               </div>
 
-              <!-- Slide 4 -->
-              <div class="partners-slide" style="width: 20%; display: flex; align-items: center; justify-content: space-between;">
-                <div style="flex: 1; display: flex; justify-content: space-between; padding: 10px;">
-                  <img src="assets/img/partner/13.jpg" alt="Image 13" style="width: 23%; height: auto; border-radius: 20px;" />
-                  <img src="assets/img/partner/14.jpg" alt="Image 14" style="width: 23%; height: auto; border-radius: 20px;" />
-                  <img src="assets/img/partner/15.jpg" alt="Image 15" style="width: 23%; height: auto; border-radius: 20px;" />
-                  <img src="assets/img/partner/16.jpg" alt="Image 16" style="width: 23%; height: auto; border-radius: 20px;" />
-                </div>
-              </div>
-
-              <!-- Slide 5 -->
-              <div class="partners-slide" style="width: 20%; display: flex; align-items: center; justify-content: space-between;">
-                <div style="flex: 1; display: flex; justify-content: space-between; padding: 10px;">
-                  <img src="assets/img/partner/17.png" alt="Image 17" style="width: 23%; height: auto; border-radius: 20px;" />
-                  <img src="assets/img/partner/18.png" alt="Image 18" style="width: 23%; height: auto; border-radius: 20px;" />
-                  <img src="assets/img/partner/19.jpg" alt="Image 19" style="width: 23%; height: auto; border-radius: 20px;" />
-                  <img src="assets/img/partner/20.jpg" alt="Image 20" style="width: 23%; height: auto; border-radius: 20px;" />
-                </div>
-              </div>
+            
+              
             </div>
 
             <!-- Next Button -->
@@ -340,7 +323,7 @@
   <!-- JavaScript for Slide Transition -->
   <script>
     let currentIndex = 0;
-    const totalSlides = 5;
+    const totalSlides = 3;
     const partnersContainer = document.getElementById("partnersContainer");
 
     // Slide Change Function
@@ -409,7 +392,8 @@
                 <div class="info-box">
                   <i class="bx bx-map"></i>
                   <h3>Our Address</h3>
-                  <p style="color: black;">2nd Floor, Ideal Tower, Near Tata Guard Room, Wadagaon Sheri, Pune Maharashtra (411014)</p>
+                  <p style="color: black;">office no 1, First Floor, Surabhi Complex, Pune - Ahmednagar Hwy, Sai Nagari, Chandan Nagar, Wadgaon Sheri, Pune, Maharashtra 411014
+</p>
                 </div>
               </div>
               <div class="col-md-6">
@@ -477,8 +461,8 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h3>Fourise<span> Software Solutions Pvt. Ltd. Pune</span></h3>
             <p>
-        <p style="color:DodgerBlue;"><b>Office Address</b></p>
-              Office No: 1, First Floor,<br>
+        <p style="color:DodgerBlue; "><b>Office Address</b></p>
+             office no 1, First Floor,<br>
               Surabhi Complex, Chandan Nagar,<br>
               Kharadi, Pune, Maharashtra (411014) <br><br>
               <strong>Phone:</strong> +91 9527605805<br>
