--- a/contact.html
+++ b/contact.html
@@ -138,7 +138,7 @@
 
     <div class="row" data-aos="fade-up" data-aos-delay="100">
       <!-- Left Side: Contact Form -->
-      <div class="col-lg-6" style="margin-top: 10%;">
+      <div class="col-lg-6" style="margin-top: 5%;">
         <div class="contact-info">
           <form action="https://api.web3forms.com/submit" method="post" role="form" class="php-email-form">
             <center><h6 align="text-center"> For More Details, Fill the Form Below</h6></center>
@@ -184,7 +184,7 @@
       </div>
 
       <!-- Right Side Content (Left Content and Google Map) -->
-      <div class="col-lg-6" style="margin-top: 10%;">
+      <div class="col-lg-6" style="margin-top: 5%;">
         <div class="left-content">
           <div class="content-box">
             <h3 style="color: #e03a3c; font-weight: bold;">
@@ -209,7 +209,7 @@
         </div>
 
         <!-- Google Map Section (Below Left Content) -->
-        <div class="info-box" style="margin-top: 10px; padding: 15px; border-radius: 10px; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);">
+        <div class="info-box" style="margin-top: 10px; padding: 15px; border-radius: 10px; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);width: 97%; height: 50.9%;">
   <h6 style="color: #e03a3c; font-weight: bold; font-size: 16px; margin-bottom: 10px;">Track Us on Google Map</h6>
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3782.300374384127!2d73.92564101392739!3d18.560491987385774!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2c11464246d03%3A0x7ef94ccf7fe4a2d0!2sFourise%20Technologies%20India%20Pvt.%20Ltd%20Pune.!5e0!3m2!1sen!2sin!4v1614158141064!5m2!1sen!2sin"
     width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
