--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
 
   </main><!-- End #main -->
 
-   <!-- ======= Footer ======= -->
+    <!-- ======= Footer ======= -->
   <footer id="footer">
 
     <div class="footer-top">
@@ -461,8 +461,8 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h3>Fourise<span> Software Solutions Pvt. Ltd. Pune</span></h3>
             <p>
-        <p style="color:DodgerBlue; "><b>Office Address</b></p>
-             office no 1, First Floor,<br>
+        <p style="color:DodgerBlue;"><b>Office Address</b></p>
+              Office No: 1, First Floor,<br>
               Surabhi Complex, Chandan Nagar,<br>
               Kharadi, Pune, Maharashtra (411014) <br><br>
               <strong>Phone:</strong> +91 9527605805<br>
