--- a/about.html
+++ b/about.html
@@ -132,7 +132,6 @@
                 </div>
                 <div style="flex: 1; text-align: justify; padding-left: 10px;">
                   <h1 style="color: #e03a3c; font-weight: bold;">Create Mobile Apps With Us</h1>
-                  <h2>Android Applications are delivered and developed by us.</h2>
                   <p>Every business wants to become easier for clients, and mobile applications<br> help achieve this.</p>
                   <a href="contact.html" class="btn-get-started scrollto">Contact us</a>
                 </div>
@@ -144,8 +143,7 @@
                   <dotlottie-wc src="https://lottie.host/1c50b72e-37e9-4b2b-92c6-bf177edf697f/U4aMOcEXhv.lottie" autoplay loop style="width: 100%; height: auto;"></dotlottie-wc>
                 </div>
                 <div style="flex: 1; text-align: justify; padding-left: 20px;">
-                  <h1 style="color: #e03a3c; font-weight: bold;">Our Expertise</h1>
-                  <h2>Create Websites With Us</h2>
+                  <h1 style="color: #e03a3c; font-weight: bold;">Create Websites With Us</h1>
                   <p>We provide all business websites at a minimum cost, along with<br> web applications and portals to grow your business online.</p>
                   <a href="web.html" class="btn-get-started scrollto">Get in touch</a>
                 </div>
