--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h3>Fourise<span> Software Solutions Pvt. Ltd. Pune</span></h3>
             <p>
-        <p style="color:DodgerBlue;"><b>Office Address</b></p>
+        <p style="color:DodgerBlue; margin-left: -62%;"><b>Office Address</b></p>
               Office No: 1, First Floor,<br>
               Surabhi Complex, Chandan Nagar,<br>
               Kharadi, Pune, Maharashtra (411014) <br><br>
